docs(wiki): update index files with correct subpage links
Update documentation links in index files to use the wiki-style
colon format [[Game:Subpage|Display]] instead of slash format.

Updated games:
- Kirby's Adventure (NES)
- Mappy-Land (NES)
- Yoshi's Cookie (NES)
- Yu-Gi-Oh! The Eternal Duelist Soul (GBA)
- The 7th Saga (SNES)
- Final Fantasy IV (SNES)

Refs #7, #21, #22

--- a/Wiki/GBA/Yu-Gi-Oh_Eternal_Duelist_Soul/index.wikitext
+++ b/Wiki/GBA/Yu-Gi-Oh_Eternal_Duelist_Soul/index.wikitext
@@ -95,13 +95,9 @@ Opponents from the anime series available to duel.
 
 ==Documentation==
 
-* [[Yu-Gi-Oh! The Eternal Duelist Soul (GBA)/ROM map|ROM Map]] - Complete ROM layout
-* [[Yu-Gi-Oh! The Eternal Duelist Soul (GBA)/RAM map|RAM Map]] - Runtime memory documentation
-* [[Yu-Gi-Oh! The Eternal Duelist Soul (GBA)/Values|Values]] - Game constants
-
-===Sub-pages===
-* [[Yu-Gi-Oh! The Eternal Duelist Soul (GBA)/ROM map/Card Data|Card Data Structure]]
-* [[Yu-Gi-Oh! The Eternal Duelist Soul (GBA)/Values/Card List|Complete Card List]]
+* [[Yu-Gi-Oh! The Eternal Duelist Soul:ROM_Map|ROM Map]] - Complete ROM layout
+* [[Yu-Gi-Oh! The Eternal Duelist Soul:RAM_Map|RAM Map]] - Runtime memory documentation
+* [[Yu-Gi-Oh! The Eternal Duelist Soul:Notes|Notes]] - Miscellaneous notes
 
 ==External Links==
 
