docs(wiki): add Known Dumps sections and fix link format
- Add Known Dumps placeholder sections to 10 index files
- Fix link format from path-style to colon-style (Game:Subpage)
- Updated: Dragon Warrior, Kirby's Adventure, Mappy-Land, Yoshi's Cookie,
  Chrono Trigger, Dragon Quest I&II, Dragon Quest III, Final Fantasy IV,
  Final Fantasy Mystic Quest, The 7th Saga, Yu-Gi-Oh! EDS

Part of #7

--- a/Wiki/GBA/Yu-Gi-Oh_Eternal_Duelist_Soul/index.wikitext
+++ b/Wiki/GBA/Yu-Gi-Oh_Eternal_Duelist_Soul/index.wikitext
@@ -99,6 +99,12 @@ Opponents from the anime series available to duel.
 * [[Yu-Gi-Oh! The Eternal Duelist Soul:RAM_Map|RAM Map]] - Runtime memory documentation
 * [[Yu-Gi-Oh! The Eternal Duelist Soul:Notes|Notes]] - Miscellaneous notes
 
+==Known Dumps==
+
+{{known_dumps}}
+<!-- TODO: Add ROM hash data from TOSEC/No-Intro -->
+{{known_dumps/end}}
+
 ==External Links==
 
 * [https://github.com/TheAnsarya/GameInfo GameInfo Repository]
