--- a/Wiki/NES/Mappy-Land/index.wikitext
+++ b/Wiki/NES/Mappy-Land/index.wikitext
@@ -65,6 +65,12 @@ Mappy-Land features:
 * [[Mappy-Land:RAM_Map|RAM Map]] - Runtime memory documentation
 * [[Mappy-Land:TBL|Text Table]] - Character encoding
 
+==Known Dumps==
+
+{{known_dumps}}
+<!-- TODO: Add ROM hash data from TOSEC/No-Intro -->
+{{known_dumps/end}}
+
 ==External Links==
 
 * [https://github.com/TheAnsarya/GameInfo GameInfo Repository]
