--- a/Wiki/SNES/Final_Fantasy_IV/index.wikitext
+++ b/Wiki/SNES/Final_Fantasy_IV/index.wikitext
@@ -124,6 +124,12 @@ The Active Time Battle system:
 * [[Final Fantasy IV:RAM_Map|RAM Map]] - Runtime memory documentation
 * [[Final Fantasy IV:TBL|Text Table]] - Character encoding
 
+==Known Dumps==
+
+{{known_dumps}}
+<!-- TODO: Add ROM hash data from TOSEC/No-Intro -->
+{{known_dumps/end}}
+
 ==External Links==
 
 * [https://github.com/TheAnsarya/GameInfo GameInfo Repository]
