docs: Add ROM checksums, referenced files/images docs, reorganize folders
- Add Wiki/~docs/ROM Checksums.md with verified hashes from GoodSNES
- Add Wiki/~docs/Referenced Files.md documenting all Files/ contents
- Add Wiki/~docs/Referenced Images.md documenting all Images/ contents
- Move orphaned Wiki/Files and Wiki/Images to Dragon_Quest_I_II folder
- Update Known Dumps sections with actual ROM checksums for:
  - Chrono Trigger (JP, US)
  - Dragon Quest I & II (JP)
  - Final Fantasy IV (JP V1.0/V1.1, US V1.0/V1.1, Easy Type)
  - Final Fantasy Mystic Quest (all 6 regional versions)
- Update .markdownlint.json to disable MD022, MD031, MD032, MD040

Refs #7

--- a/Wiki/SNES/Chrono_Trigger/index.wikitext
+++ b/Wiki/SNES/Chrono_Trigger/index.wikitext
@@ -114,9 +114,14 @@ Three-character combination attacks requiring specific party compositions.
 
 ==Known Dumps==
 
-{{known_dumps}}
-<!-- TODO: Add ROM hash data from TOSEC/No-Intro -->
-{{known_dumps/end}}
+{| class="wikitable sortable"
+|-
+! Version !! Size !! MD5 !! SHA1 !! Source
+|-
+| Chrono Trigger (J) [!] || 4,194,304 || <code>9d56fb54af198d43dcd62550767999df</code> || <code>a82f0fba9bb111ffd0a878853a4563917d9b67bb</code> || GoodSNES
+|-
+| Chrono Trigger (U) [!] || 4,194,304 || <code>a2bc447961e52fd2227baed164f729dc</code> || <code>de5822f4f2f7a55acb8926d4c0eaa63d5d989312</code> || GoodSNES
+|}
 
 ==See Also==
 
