--- a/Wiki/SNES/Final_Fantasy_IV/index.wikitext
+++ b/Wiki/SNES/Final_Fantasy_IV/index.wikitext
@@ -126,9 +126,20 @@ The Active Time Battle system:
 
 ==Known Dumps==
 
-{{known_dumps}}
-<!-- TODO: Add ROM hash data from TOSEC/No-Intro -->
-{{known_dumps/end}}
+{| class="wikitable sortable"
+|-
+! Version !! Size !! MD5 !! SHA1 !! Source
+|-
+| Final Fantasy II (U) (V1.0) [!] || 1,048,576 || <code>4fa9e542b954dcb954d5ce38188d9d41</code> || <code>2fa447e3e010ce8ba5b4e746f6609aa0e324d947</code> || GoodSNES
+|-
+| Final Fantasy II (U) (V1.1) [!] || 1,048,576 || <code>27d02a4f03e172e029c9b82ac3db79f7</code> || <code>41a74eb369a7a91815529ef99ab1b20e2bdf3e26</code> || GoodSNES
+|-
+| Final Fantasy IV (J) (V1.0) [!] || 1,048,576 || <code>5cdc56ba9f5f23e412af09f11ed47f83</code> || <code>7502ed13fe969b294aab9ea3600dd8341713cd03</code> || GoodSNES
+|-
+| Final Fantasy IV (J) (V1.1) [!] || 1,048,576 || <code>a2959ad8c1ff5f2719264ab4c7e40464</code> || <code>eac14578b3465ffce874119005f9b244e8565a79</code> || GoodSNES
+|-
+| Final Fantasy IV - Easy Type (J) [!] || 1,048,576 || <code>87ad91e3000895ba53956b3bd021717d</code> || <code>a2d04c5f3948ca930d2c0bc4e6f34d62f06a9c58</code> || GoodSNES
+|}
 
 ==External Links==
 
